--- a/src/main/webapp/userOrderDetail.html
+++ b/src/main/webapp/userOrderDetail.html
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="js/JquerySession.js"></script>
 <script type="text/javascript" src="js/json.js"></script>
 <script type="text/javascript" src="js/back.js"></script>
+<script type="text/javascript" src="js/jquery.spinner.js"></script>
 <script>
 	var orderId = sessionStorage.getItem("orderId");
 	var orderStatusName={"1":"待报价","2":"待确认","3":"待发货","4":"待收货","5":"售后处理中","6":"已完成"};
@@ -46,10 +47,10 @@
              	 data = data.list1;
                  if(data){
                 	 if(data.length==1){//如果只有一个订单项   删除就是取消订单
-                		 $("#order").append("<tr><td style='display:none;'><input type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[0].id+"'/></td><td>"+data[0].goods_name+"</td><td>"+data[0].goods_low_price+"~"+data[0].goods_high_price+"</td><td><div>"+data[0].goods_amount+"</div><input type='number' min=0 max='"+data[0].goods_amount+"' value='"+data[0].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"cancelOrder()\"/><input type='button' value='修改' onclick=\"editOrder(this)\"/></td></tr>");
+                		 $("#order").append("<tr><td style='display:none;'><input type='text' value='"+data[0].goods_id+"'/><input type='checkbox' value='"+data[0].id+"'/></td><td>"+data[0].goods_name+"</td><td>"+data[0].goods_low_price+"~"+data[0].goods_high_price+"</td><td><div>"+data[0].goods_amount+"</div><input type='number' min=0 max='"+data[0].goods_amount+"' value='"+data[0].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[0].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"cancelOrder()\"/><input type='button' value='修改' onclick=\"editOrder(this)\"/></td></tr>");
                 	 }else{
                 		 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                    		 $("#order").append("<tr><td style='display:none;'><input type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[i].id+"'/></td><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td><div>"+data[0].goods_amount+"</div><input type='number'min=0 max='"+data[i].goods_amount+"' value='"+data[i].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"deleteGoods('"+data[i].id+"')\"/><input type='button' value='修改' onclick=\"editOrder(this)\"/></td></tr>");
+                    		 $("#order").append("<tr><td style='display:none;'><input type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[i].id+"'/></td><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td><div>"+data[0].goods_amount+"</div><input type='number'min=0 max='"+data[i].goods_amount+"' value='"+data[i].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"deleteGoods(this)\"/><input type='button' value='修改' onclick=\"editOrder(this)\"/></td></tr>");
                     	 }
                 	 }
                 	 if(orderStatus!=3&&orderStatus!=4){//订单项操作列处理
@@ -200,7 +201,7 @@
                  data = data.list1;
                  if(data){
                 	 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                		 $("#order").append("<tr><td style='display:none;'><input type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[i].id+"'/></td><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td><div>"+data[0].goods_amount+"</div><input style='display:none;' type='number' min=0 max='"+data[i].goods_amount+"' value='"+data[i].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"deleteGoods('"+data[i].id+"')\"/><input type='button' value='修改' onclick=\"editOrder(this)\"/></td></tr>");
+                		 $("#order").append("<tr><td style='display:none;'><input type='text' value='"+data[i].goods_id+"'/><input type='checkbox' value='"+data[i].id+"'/></td><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td><div>"+data[0].goods_amount+"</div><input style='display:none;' type='number' min=0 max='"+data[i].goods_amount+"' value='"+data[i].goods_amount+"'/></td><td><input type='text' disabled='true' value='"+data[i].goods_real_price+"'/></td><td><input type='button' value='删除' onclick=\"deleteGoods(this)\"/><input type='button' value='修改' onclick=\"editOrder(this)\"/></td></tr>");
                 	 }
                      $("#orderStatus").text(orderStatusName[orderStatus]);//更改订单状态
                      if(orderStatus!=1){
@@ -278,11 +279,6 @@
 			 return;
 		 }
  		//获取需要售后的商品
- 		//"id": "cf2000fa-3b3f-4814-a59e-4363f5ae8f9d",
-		//"goods_id": "2",
-		//"order_id": "361d650ea-61fa-40a4-bc12-7c769cdd454e",
-		//"goods_amount": 2,
-		//"goods_real_price": 15
  		var param = {};
 		var list =new Array();
  		$('#order tr:gt(0)').each(function(){
@@ -364,19 +360,29 @@
 			$('#orderLog').show();
 		}
 	}
-	function deleteGoods(goodsId){//删除一个购物项
+	function deleteGoods(obj){//删除一个购物项
 		if(!confirm("确认删除？")){
-			return;
-		}
-		var data ={"id":""+goodsId};
+				return;
+			}
+		
+		var tr1 = obj.parentNode.parentNode.rowIndex;  //得到当前所在行
+		obj = '#order tr:eq('+tr1+')'; 
+		var param={				//list格式
+					"id": $(obj).find('td:eq(0) input[type="checkbox"]').val(),
+					"order_id":orderId,//订单id
+					"orderRealPrice":orderPrice,//订单价格
+					"amount":parseInt($(obj).find('td:eq(3) div').html()),//商品数量
+					"goods_real_price":$(obj).find('td:eq(4) input[type="text"]').val()//商品价格
+			  };
 		$.ajax({
 	            url: "/fresh/order_item/deleteOrderItem.action",        //后台url
-	            data: JSON.stringify(data),
+	            data: JSON.stringify(param),
 	            type: "POST",                   //类型，POST或者GET
 	            dataType: 'json',              //数据返回类型，可以是xml、json等
 	            contentType:'application/json;charset=UTF-8',
 	            success: function (data) {      //成功，回调函数
 	                //alert(data.result);
+	            	sessionStorage.setItem("orderPrice",data.orderRealPrice);
 	                window.location.reload(); 
 	            },
 	            error: function (er) {          //失败，回调函数
